fix css alignment on inputs, limit number entry to positive integers

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-image: url("http://www.crystallakegolfcourse.com/_assets/images/hero/16-green.jpg");
     background-size: cover;
+    box-sizing: border-box;
 }
 .wider {
     width: 500px;
@@ -19,7 +20,7 @@ body{
     padding: 20px;
 }
 .hole{
-    max-width: 50px;
+    max-width: 40px;
 }
 .main{
     display: flex;
@@ -50,6 +51,11 @@ body{
 }
 
 input{
+    text-align: center;
+}
+.inputFrame{
+    max-height: 20px;
+    background-color: aliceblue;
     text-align: center;
 }
 h3{
